feat(html,css): add button and styles
- Add a button that will be used in the next step to change the grid.
- Style the button to make it stand out visually.

Refs: projects/etch-a-sketch/
Authored-by: Lennard

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script type="module" src="js/script.js"></script>
   </head>
   <body>
+    <div class="btn-container">
+      <button class="btn">CLICK ME to adjust your custom grid!</button>
+    </div>
     <div class="container"></div>
   </body>
 </html>
